--- a/README.adoc
+++ b/README.adoc
@@ -9,7 +9,7 @@ image::pics/001-overview.png[Container Build Options,640]
 This lab will walk you through steps to build container images with various technologies.
 
 * Slides: https://speakerdeck.com/maeddes/options-galore-from-source-code-to-container-image
-* Recording (English): https://www.youtube.com/watch?v=mFamovTQ6Po
+* Recording (English): https://www.youtube.com/watch?v=HFhIqfKn_XI
 * Recording (German): https://www.youtube.com/watch?v=ga8iqQ25lUY
 * Carlos Repo: https://github.com/carlosbarragan/java-containers-demo
 
